--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,11 @@ dependencies {
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.3'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.3'
 
-    implementation project(':bottomdialog')
+
+//    implementation project(':bottomdialog')
+
+    implementation 'com.github.Vove7:BottomDialog:1.0'
+}
+repositories {
+    maven { url 'https://jitpack.io' }
 }
