BottomDialogActivity 在最近任务隐藏

--- a/bottomdialog/src/main/AndroidManifest.xml
+++ b/bottomdialog/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <application>
         <activity
             android:name=".BottomDialogActivity"
+            android:excludeFromRecents="true"
             android:theme="@style/BottomDialogActivity" />
     </application>
 </manifest>
