--- a/extension/src/main/AndroidManifest.xml
+++ b/extension/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cn.vove7.bottomdoalog.extension" />
+    package="cn.vove7.bottomdialog.extension" />
